Replace String.formatted with String.format until the former is a non-preview feature to resolve IDE problems