@@ -1,12 +1,13 @@
 package org.freedesktop.xjb;
 
 import java.io.IOException;
+import java.net.InetSocketAddress;
 import java.net.SocketAddress;
+import java.net.SocketException;
+import java.nio.ByteBuffer;
 import java.nio.channels.SocketChannel;
 import java.nio.channels.UnixDomainSocketAddress;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -17,12 +18,14 @@ import org.jetbrains.annotations.Nullable;
 @SuppressWarnings("unused")
 public final class XjbConnection implements AutoCloseable {
 
+    private int displayNumber;
+
     private int preferredScreenNumber;
 
     private SocketChannel socketChannel;
 
     /* Prevent instantiation. */
-    private XjbConnection(final int preferredScreenNumber) {
+    private XjbConnection(final int displayNumber, final int preferredScreenNumber) {
         if (preferredScreenNumber < 0)
             throw new IllegalArgumentException();
         this.preferredScreenNumber = preferredScreenNumber;
@@ -36,25 +39,13 @@ public final class XjbConnection implements AutoCloseable {
         return establish(displayName, null);
     }
 
-    /**
-     * https://regex101.com/r/X6Ix1y/2
+    /*
+     * See 6502afa for a more complex version of this regular expression which would support socket paths and the
+     * specification of a protocol. However, these features are not documented in the X man pages where only the
+     * hostname:displaynumber.screennumber syntax is mentioned.
      */
     private static final Pattern DISPLAY_ENVIRONMENT_VARIABLE_FORMAT =
-        Pattern.compile(
-            """
-            ^(?x) # Embedded flags expression to enable comment mode.
-                 (?: # Start of the non-capturing group containing either a socketPath or an optional host name.
-                    (?<socketPath>/.+?) # Match a file path to a socket
-                                       | # or
-                                        (?: # optionally match a host name consisting of
-                                           (?<host>.+?) # a host,
-                                                       (?:/(?<protocol>[^:]+))? # optionally followed by a protocol.
-                                                                               )? # End of the optional host name.
-                                                                                 : # Required separator between the optional host name and
-                                                                                  (?<display>[0-9]+) # the display number.
-                                                                                                    ) # End of the choice between socketPath and the host name.
-                                                                                                     (?:\\.(?<screen>[0-9]+))?$ # Both may be followed by an optional screen number.
-            """);
+        Pattern.compile("^(?<hostname>.+)?:(?<display>[0-9]+)(?:\\.(?<screen>[0-9]+))?$");
 
     private static final int X_TCP_BASE_PORT = 6_000;
 
@@ -62,60 +53,37 @@ public final class XjbConnection implements AutoCloseable {
             throws IOException {
         final Matcher matcher = DISPLAY_ENVIRONMENT_VARIABLE_FORMAT.matcher(displayName);
         if (!matcher.matches())
-            throw new IllegalArgumentException("Bad display string '%s'.".formatted(displayName));
+            throw new IllegalArgumentException(String.format("Bad display string '%s'.", displayName));
 
-        /* Use the specified screen number as preferredScreenNumber, or 0 if it is not specified. */
-        final int preferredScreenNumber =
+        /* Use the specified screen, or 0 if it is not specified. */
+        final int screen =
             Optional
                 .ofNullable(matcher.group("screen"))
                 .map(Integer::parseInt)
                 .orElse(0);
-        final var connection = new XjbConnection(preferredScreenNumber);
-
-        final String socketPath = matcher.group("socketPath");
-        if (socketPath != null) {
-            connection.establishViaUnixDomainSocket(Paths.get(socketPath));
-            return connection;
-        }
-
-        final String host = matcher.group("host");
-        final String protocol =
-            Optional
-                .ofNullable(matcher.group("protocol"))
-                .orElse("tcp");
         final int display = Integer.parseInt(matcher.group("display"));
+        final var connection = new XjbConnection(display, screen);
 
-        if (host == null || host.equals("unix") || protocol.equals("unix")) {
-            connection.establishViaUnixDomainSocket(display);
-        } else {
-
+        final String hostname = matcher.group("hostname");
+        if (hostname == null) {
+            try {
+                /*
+                 * TODO:
+                 *  - try /usr/spool/sockets/X11/%d location on HP-UX
+                 *  - try /var/tsol/doors/.X11-unix/X%d location under Solaris Trusted Extensions
+                 */
+                /* Attempt to connect via AF_UNIX. */
+                connection.connect(new UnixDomainSocketAddress("/tmp/.X11-unix/X" + display), authInfo);
+                return connection;
+            } catch (final SocketException exception) {
+                /* Fallback to AF_INET/AF_INET6 with hostname "localhost". */
+            }
         }
+        connection.connect(
+            new InetSocketAddress(Objects.requireNonNullElse(hostname, "localhost"), X_TCP_BASE_PORT + display),
+            authInfo);
+
         return connection;
-    }
-
-    private void establishViaUnixDomainSocket(final int display) throws IOException {
-        final Path defaultSocketPath = Paths.get("/tmp/.X11-unix/X" + display);
-        if (Files.exists(defaultSocketPath)) {
-            establishViaUnixDomainSocket(defaultSocketPath);
-            return;
-        }
-
-        final Path hpUxSocketPath = Paths.get("/usr/spool/sockets/X11/" + display);
-        if (Files.exists(hpUxSocketPath)) {
-            establishViaUnixDomainSocket(hpUxSocketPath);
-            return;
-        }
-
-        final Path tsolSocketPath = Paths.get("/var/tsol/doors/.X11-unix/X" + display);
-        if (Files.exists(tsolSocketPath)) {
-            establishViaUnixDomainSocket(tsolSocketPath);
-            return;
-        }
-        throw new RuntimeException();
-    }
-
-    private void establishViaUnixDomainSocket(final Path socketPath) throws IOException {
-        connect(new UnixDomainSocketAddress(socketPath));
     }
 
     @Override
@@ -123,8 +91,24 @@ public final class XjbConnection implements AutoCloseable {
         socketChannel.close();
     }
 
-    private void connect(final SocketAddress remote) throws IOException {
+    public static void main(final String... args) throws IOException {
+        XjbConnection.establish();
+    }
+
+    private void connect(final SocketAddress remote, final AuthInfo authInfo) throws IOException {
         socketChannel = SocketChannel.open(remote);
+        socketChannel.write(
+            ByteBuffer.allocate(1 + 1 + 5 * 2)
+                .put((byte) 'B')        /* byte_order */
+                .put((byte) 0)          /* pad0       */
+                .putShort((short) 11)   /* protocol_major_version */
+                .putShort((short)  0)   /* protocol_minor_version */
+                .putShort((short)  0)   /* authorization_protocol_name_len */
+                .putShort((short)  0)   /* authorization_protocol_data_len */
+                .putShort((short)  0)); /* pad1 */
+
+        final ByteBuffer commonReplyHeader = ByteBuffer.allocate(8);
+        socketChannel.read(commonReplyHeader);
     }
 
     public int getPreferredScreenNumber() {
